# reqcache

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  PUBLISH.md  README.md  SUMMARY.md  demo.py  publish.sh  pyproject.toml  test_params.py
openspec/changes/archive/2025-11-14-add-request-caching/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-14-add-request-caching/specs/request-caching/: spec.md
openspec/changes/archive/2025-11-14-enable-default-caching/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-14-enable-default-caching/specs/request-caching/: spec.md
openspec/specs/request-caching/: spec.md
reqcache/: __init__.py
tests/: test_reqcache.py  test_reqcache_v2.py
