[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqcache-py"
version = "1.0.0"
description = "A TTL-based caching wrapper for Python requests library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "wangys-kits", email = "wyshdiy@hotmail.com"}
]
keywords = ["requests", "cache", "http", "web-scraping", "data-collection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/wangys-kits/reqcache"
Repository = "https://github.com/wangys-kits/reqcache"

[tool.setuptools.packages.find]
where = ["."]
include = ["reqcache*"]
exclude = ["tests*", "openspec*"]
